Update openapi.yaml and change numa_info name.
