# performance-storage-service/pss_project/api/models/rest/metadata/EnvironmentMetadata.py
@@ -1,5 +1,5 @@
 class EnvironmentMetadata(object):
-    def __init__(self, os_version=None, cpu_number=None, numa_info=None):
+    def __init__(self, os_version=None, cpu_number=None, cpu_socket=None):
         self.os_version = os_version
         self.cpu_number = cpu_number
-        self.numa_info = numa_info
+        self.cpu_socket = cpu_socket
